--- a/biology/bcftools/Makefile
+++ b/biology/bcftools/Makefile
@@ -1,8 +1,7 @@
 # Created by: Reed A. Cartwright <cartwright@asu.edu>
-# $FreeBSD$
 
 PORTNAME=	bcftools
-PORTVERSION=	1.11
+PORTVERSION=	1.12
 CATEGORIES=	biology
 
 MAINTAINER=	jwb@FreeBSD.org
@@ -11,14 +10,13 @@ COMMENT=	Tools for manipulating next-generation sequencing data
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-LIB_DEPENDS=	libhts.so.3:biology/htslib
+LIB_DEPENDS=	libhts.so:biology/htslib
 TEST_DEPENDS=	bash:shells/bash
 RUN_DEPENDS=	bash:shells/bash
 
 USES=		autoreconf gmake localbase perl5 python:env shebangfix
 
 USE_GITHUB=	yes
-USE_LDCONFIG=	${PREFIX}/libexec/${PORTNAME}
 USE_PERL5=	test
 
 GH_ACCOUNT=	samtools
