Tweak biology/py-orange3-single-cell version 0.8.2_3

--- a/biology/py-orange3-single-cell/Makefile
+++ b/biology/py-orange3-single-cell/Makefile
@@ -1,4 +1,3 @@
-# $FreeBSD$
 
 PORTNAME=	orange3-single-cell
 DISTVERSION=	0.8.2
@@ -10,6 +9,9 @@ MAINTAINER=	yuri@FreeBSD.org
 COMMENT=	Orange add-on for gene expression of single cell data
 
 LICENSE=	AGPLv3+
+
+DEPRECATED=	Uses EOL Python 2.7 via misc/orange3
+EXPIRATION_DATE=2021-06-23
 
 RUN_DEPENDS=	orange3>0:misc/orange3 \
 		${PYTHON_PKGNAMEPREFIX}orange3-bioinformatics>0:biology/py-orange3-bioinformatics@${PY_FLAVOR} \
